--- a/src/skydrop/view/ProductPageView.form
+++ b/src/skydrop/view/ProductPageView.form
@@ -78,9 +78,9 @@
                       <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="321" max="-2" attributes="0"/>
-                  <Component id="txtSearchField" min="-2" pref="191" max="-2" attributes="0"/>
+                  <Component id="Search" min="-2" pref="191" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                  <Component id="txtSearch" min="-2" pref="52" max="-2" attributes="0"/>
+                  <Component id="SearchButton" min="-2" pref="62" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -96,8 +96,8 @@
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="txtSearch" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
-                      <Component id="txtSearchField" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                      <Component id="SearchButton" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                      <Component id="Search" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
               </Group>
@@ -113,13 +113,13 @@
             <Property name="text" type="java.lang.String" value="SkyDrop"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="txtSearch">
+        <Component class="javax.swing.JButton" name="SearchButton">
           <Properties>
             <Property name="text" type="java.lang.String" value="\ud83d\udd0d" containsInvalidXMLChars="true"/>
             <Property name="horizontalTextPosition" type="int" value="0"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtSearchActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SearchButtonActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
@@ -130,9 +130,9 @@
             <Property name="text" type="java.lang.String" value=" Your Smart Shopping Partner"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtSearchField">
+        <Component class="javax.swing.JTextField" name="Search">
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtSearchFieldActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SearchActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
